project/kubernetes/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose-1.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  type: LoadBalancer
  ports:
  - name: "9090"
    port: 9090
    targetPort: 8080
  selector:
    io.kompose.service: keycloak
